@@ -319,7 +319,7 @@ public class SSHCommandTemplate implements SSHCommand, Comparable<SSHCommandTemp
 		List<String> commandsStringList = new LinkedList<>();
 		for (SSHCommand c : sshCommands) {
 			String comstr = c.getCommandRaw();
-			if (!(comstr == null || comstr.trim().isEmpty())) {
+			if (!(comstr == null || comstr.isBlank())) {
 				commandsStringList.add(c.getCommandRaw());
 			}
 		}
